<resources>
    <string name="app_name">OM-Property</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="rent">Rent</string>
    <string name="buy">Buy</string>
    <string name="project">Project</string>
    <string name="newProperty">New Property</string>

    <string name="location">Location</string>
    <string name="From">From</string>
    <string name="To">To</string>
    <string name="search">Search</string>
    <string name="propertyType">property Type</string>
    <string name="Hostel">Hostel</string>
    <string name="House">House</string>
    <string name="Flat">Flat</string>
    <string name="Shops">Shops</string>
    <string name="Land">Land</string>
    <string name="other">Other +</string>
    <string name="NoOfRooms">Number of Rooms</string>
    <string name="price">Price</string>
    <string name="title_activity_login">login</string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="existing_user">Existing User</string>
    <string name="new_user">New user</string>


    <string name="ForgotPass">Forgot Password ? </string>
    <string name="Login">Login </string>

    <string name="Terms_conditions">Terms and Conditions</string>
    <string name="signup">Sign up</string>
    <string name="PropertyDescription" >Property Description :</string>
    <string name="Price"  >Price :</string>
    <string name="Location" >Location :</string>
    <string name="PropertyAge">Property Age :</string>
    <string name="Area" >Area :</string>
    <string name="ContactOwner">Contact Owner</string>
    <string name="OwnerName" >Owner Name :</string>
    <string name="PhoneNumber"> Phone Number:</string>


</resources>
