<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.training3.om_property.buy">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/location"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Space
                android:layout_width="20px"
                android:layout_height="40px" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/propertyType"
                android:id="@+id/textView3"
                android:textSize="22dp"
                 />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:text="@string/Flat"
                    android:id="@+id/btnFlat_Buy"
                    android:layout_weight="1"
                    android:onClick="onFlat"
                    android:background="@drawable/btn_off"
                    android:shadowColor="#A8A8A8"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"/>
                <Space
                    android:layout_width="20px"
                    android:layout_height="40px" />

                <Button
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:text="@string/House"
                    android:background="@drawable/btn_off"
                    android:id="@+id/btnHouse_buy"
                    android:layout_weight="1"
                    android:onClick="onHouse" />

                <Space
                    android:layout_width="20px"
                    android:layout_height="40px" />
                <Button
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:text="@string/Hostel"
                    android:background="@drawable/btn_off"
                    android:id="@+id/btnHostel_Buy"
                    android:layout_weight="1"
                    android:onClick="onHostel"
                    android:nestedScrollingEnabled="true" />
                <Space
                    android:layout_width="20px"
                    android:layout_height="40px" />
            </LinearLayout>
            <Space
                android:layout_width="20px"
                android:layout_height="20px" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:text="@string/Shops"
                    android:background="@drawable/btn_off"
                    android:id="@+id/btnShops_Buy"
                    android:layout_weight="1"
                    android:onClick="onShops" />
                <Space
                    android:layout_width="20px"
                    android:layout_height="40px" />
                <Button
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:text="@string/Land"
                    android:background="@drawable/btn_off"
                    android:id="@+id/btnLand_Buy"
                    android:layout_weight="1"
                    android:onClick="onLand" />
                <Space
                    android:layout_width="20px"
                    android:layout_height="40px" />
                <Button
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:text="@string/other"
                    android:background="@drawable/btn_off"
                    android:id="@+id/btnOther_Buy"
                    android:layout_weight="1" />
                <Space
                    android:layout_width="20px"
                    android:layout_height="40px" />
            </LinearLayout>
            <Space
                android:layout_width="20px"
                android:layout_height="40px" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/NoOfRooms"
                android:id="@+id/textView4"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="22dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                >

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:id="@+id/btnNo1_buy"
                    android:layout_weight="1"
                    android:onClick="onRone"
                    android:nestedScrollingEnabled="false" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2"
                    android:id="@+id/btnNo2_buy"
                    android:layout_weight="1"
                    android:onClick="onRtwo" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3"
                    android:id="@+id/btnNo3_buy"
                    android:layout_weight="1"
                    android:onClick="onRthree" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4"
                    android:id="@+id/btnNo4_buy"
                    android:layout_weight="1"
                    android:onClick="onRfour" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5+"
                    android:id="@+id/btnNo5_buy"
                    android:layout_weight="1"
                    android:onClick="onRfive" />
            </LinearLayout>

            <Space
                android:layout_width="20px"
                android:layout_height="40px" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:id="@+id/textView5"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="22dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/from"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/From"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/to"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/To"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
            <Space
                android:layout_width="20px"
                android:layout_height="100px" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onSearch"
                    android:text="@string/search"
                    android:id="@+id/btnSearch_buy"
                    />


            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</RelativeLayout>
