<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"



    tools:context="com.example.training3.om_property.BuyDropDetails">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout2"
        android:layout_alignTop="@+id/linearLayout">


    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout"
        android:layout_alignRight="@+id/linearLayout2"
        android:layout_alignEnd="@+id/linearLayout2"

        android:weightSum="1">



        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="260px"
            android:layout_margin="5dp"
            android:src="@drawable/example2" />






        <Space
            android:layout_width="20px"
            android:layout_height="10px"
            />



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PropertyDescription"
                android:id="@+id/textView5"
                android:textSize="18dp"

                />


            <EditText
                android:layout_width="157dp"
                android:layout_height="35dp"
                android:id="@+id/propertyDescription"
                />
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Price"
                android:id="@+id/textView7"
                android:textSize="18dp" />

            <EditText
                android:layout_width="157dp"
                android:layout_height="35dp"
                android:id="@+id/price" />
        </LinearLayout>
        <Space
            android:layout_width="20px"
            android:layout_height="2px" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Location"
                android:id="@+id/textView8"
                android:textSize="18dp" />

            <EditText
                android:layout_width="157dp"
                android:layout_height="35dp"
                android:id="@+id/location" />
        </LinearLayout>
        <Space
            android:layout_width="20px"
            android:layout_height="2px" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PropertyAge"
                android:id="@+id/textView9"
                android:textSize="18dp" />

            <EditText
                android:layout_width="157dp"
                android:layout_height="33dp"
                android:id="@+id/propertyAge" />
        </LinearLayout>
        <Space
            android:layout_width="20px"
            android:layout_height="2px" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Area"
                android:id="@+id/textView10"
                android:textSize="18dp" />

            <EditText
                android:layout_width="157dp"
                android:layout_height="35dp"
                android:id="@+id/coveredArea" />
        </LinearLayout>
        <Space
            android:layout_width="20px"
            android:layout_height="2px" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </LinearLayout>
        <Space
            android:layout_width="20px"
            android:layout_height="50px" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ContactOwner"
                android:id="@+id/textView12"
                android:textSize="20dp"
                android:textStyle="bold"
                />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/OwnerName"
                android:id="@+id/textView13"
                android:textSize="12dp" />

            <EditText
                android:layout_width="157dp"
                android:layout_height="35dp"
                android:id="@+id/ownerName" />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PhoneNumber"
                android:id="@+id/textView14"
                android:textSize="12dp" />

            <EditText
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:id="@+id/phoneNumber" />


        </LinearLayout>


    </LinearLayout>





</RelativeLayout>
