<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_home"

    android:background="@drawable/bg"
    tools:context="com.example.training3.om_property.HomeActivity">




    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150px">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:id="@+id/firstlayout"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/btnBuy"

                android:text="@string/buy"
                android:textColor="#FFFFFF"
                android:textSize="18sp"

                android:layout_width="132dp"
                android:layout_height="34dp"
                android:background="@drawable/btnbuy"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:onClick="onBuy"
                android:shadowRadius="5"
                android:layout_weight="1" />
            <Space
                android:layout_width="20px"
                android:layout_height="20px" />
            <Button
                android:id="@+id/btnRent"

                android:text="@string/rent"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:onClick="onRent"
                android:layout_width="132dp"
                android:layout_height="34dp"
                android:background="@drawable/btnrent"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:layout_weight="1" />


        </LinearLayout>
        <Space
            android:layout_width="20px"
            android:layout_height="20px" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_below="@+id/firstlayout"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnProject"
                android:onClick="onProject"
                android:text="@string/project"
                android:textColor="#FFFFFF"
                android:textSize="18sp"

                android:layout_width="132dp"
                android:layout_height="34dp"
                android:background="@drawable/btnproject"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:layout_weight="1" />


            <Space
                android:layout_width="20px"
                android:layout_height="20px" />

            <Button
                android:id="@+id/btnProperty"
                android:onClick="onNewProperty"
                android:text="@string/newProperty"
                android:textColor="#FFFFFF"
                android:textSize="18sp"

                android:layout_width="132dp"
                android:layout_height="34dp"
                android:background="@drawable/btnproperty"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
